# tinyapi

./: .gitignore  Cargo.toml  README.md
scripts/: release.sh
src/: client.rs  lib.rs
